--- a/src/main/resources/templates/cultura/formCultura.html
+++ b/src/main/resources/templates/cultura/formCultura.html
@@ -35,7 +35,7 @@
     </div>
 
     <div>
-    <label for="tipos">Tipo do Soloo:</label>
+    <label for="tipos">Tipo do Solo:</label>
     <input id="tipos" name="tipos" th:value="${cultura?.tipos}">
     </div>
 
