--- a/src/main/resources/templates/cultura/formCultura.html
+++ b/src/main/resources/templates/cultura/formCultura.html
@@ -5,7 +5,7 @@
       layout:decorate="~{template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro de Cultura</title>
+    <title>Cadastro de Culturas</title>
 </head>
 <body>
 <div layout:fragment="conteudo">
