--- a/src/main/resources/templates/colheita/viewColheita.html
+++ b/src/main/resources/templates/colheita/viewColheita.html
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="colheita : ${listaColheitas}">
+        <tr th:each="colheita : ${lista}">
             <td th:text="${colheita.dataColheita}"></td>
             <td th:text="${colheita.quantidade}"></td>
             <td>
