--- a/src/main/resources/templates/irrigacao/formIrrigacao.html
+++ b/src/main/resources/templates/irrigacao/formIrrigacao.html
@@ -26,7 +26,7 @@
 
         <div>
             <label for="duracao">Duração da Irrigação(tempo): </label>
-            <input id="duracao" name="duracao" th:value="${irrigacao?.duracao}">
+            <input id="duracao" name="duracao" th:value="${irrigacao?.duracao}" type="text">
         </div>
 
         <div>
