--- a/src/main/resources/templates/irrigacao/viewIrrigacao.html
+++ b/src/main/resources/templates/irrigacao/viewIrrigacao.html
@@ -22,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="irrigacao : ${listaIrrigacao}">
+        <tr th:each="irrigacao : ${lista}">
             <td th:text="${irrigacao.dataIrrig}"></td>
             <td th:text="${irrigacao.quantid}"></td>
             <td th:text="${irrigacao.duracao}"></td>
