--- a/src/main/resources/templates/plantacao/viewPlantacao.html
+++ b/src/main/resources/templates/plantacao/viewPlantacao.html
@@ -20,7 +20,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="plantacao : ${listaPlantacao}">
+        <tr th:each="plantacao : ${lista}">
             <td th:text="${plantacao.dataPlantio}"></td>
             <td th:text="${plantacao.areaCultivo}"></td>
             <td th:text="${plantacao.estagio}"></td>
