--- a/src/main/resources/templates/propriedade/viewPropriedade.html
+++ b/src/main/resources/templates/propriedade/viewPropriedade.html
@@ -29,7 +29,7 @@
             <td>
                 <form action="/propriedade" method="post">
                     <input type="hidden" name="_method" value ="delete">
-                    <input type="hidden" name="id" th:value ="${propriedade.id}">
+                    <input type="hidden" name="idPropriedade" th:value="${propriedade.idPropriedade}">
                     <input type="submit" value="Excluir">
                 </form>
 
