--- a/src/main/resources/templates/cultura/viewCultura.html
+++ b/src/main/resources/templates/cultura/viewCultura.html
@@ -20,6 +20,8 @@
         <th>Tipo da Cultura</th>
         <th>Tipo do Solo</th>
         <th>Estação</th>
+        <th>Comandos</th>
+
     </tr>
     </thead>
     <tbody>
@@ -31,16 +33,17 @@
     <td th:text="${cultura.tipos}"></td>
     <td th:text="${cultura.est}"></td>
     <td>
-        <form action="/cultura" method="post">
-            <input type="hidden" name="_method" value ="delete">
-            <input type="hidden" name="id" th:value ="${cultura.id}">
+        <form action="/cultura" method="post" id="view_form">
+            <input type="hidden" name="_method" value="delete">
+            <input type="hidden" name="id" th:value="${cultura.id}">
             <input type="submit" value="Excluir">
         </form>
 
-        <form action="/cultura/formCultura" method="get">
+        <form action="/cultura/formCultura" method="get" id="view_form2">
             <input type="hidden" name="id" th:value="${cultura.id}">
             <input type="submit" value="Editar">
         </form>
+
     </td>
     </tr>
     </tbody>
