--- a/src/main/resources/templates/irrigacao/formIrrigacao.html
+++ b/src/main/resources/templates/irrigacao/formIrrigacao.html
@@ -38,10 +38,20 @@
             <label for="observacao">Observação: </label>
             <input id="observacao" name="observacao" th:value="${irrigacao?.observacao}">
         </div>
+        <div>
+            <label for="plantacao">Plantação</label>
+            <select id="plantacao" name="plantacao">
+                <option value="">Escolha a Plantação</option>
+                <th:block th:each="plan:${lista}">
+                    <option th:value="${plan.idPlantacao}" th:text="${plan.nome}"></option>
+
+                </th:block>
+            </select>
+        </div>
 
         <div style="display: flex; justify-content:center;">
             <input type="submit" value="Cadastrar">
-            <a href="/menu/principal">Menu</a>
+
         </div>
 
     </form>
