--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -27,7 +27,7 @@ h1 {
     width: 80px;
     height: 50px;
     box-shadow: none;
-    font-size: 5px;
+
 }
 
 form {
@@ -106,7 +106,7 @@ th,
 td {
    border: 1px solid #ddd;
     padding: 3px;
-    text-align: left;
+    text-align: center;
     width:auto;
     color: black;
 }
