--- a/src/main/resources/templates/plantacao/formPlantacao.html
+++ b/src/main/resources/templates/plantacao/formPlantacao.html
@@ -15,6 +15,10 @@
         <input type="hidden" name="idPlantacao" th:value ="${plantacao?.idPlantacao}">
 
         <div>
+            <label for="nome">Nome: </label>
+            <input id="nome" name="nome"th:value="${plantacao?.nome}">
+        </div>
+        <div>
             <label for="dataPlantio">Data do Plantio: </label>
             <input id="dataPlantio" name="dataPlantio" th:value="${plantacao?.dataPlantio}">
         </div>
@@ -50,7 +54,7 @@
 
         <div style="display: flex; justify-content:center;">
             <input type="submit" value="Cadastrar">
-            <a href="/menu/principal">Menu</a>
+
         </div>
 
     </form>
