--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -121,6 +121,7 @@
                     <ul>
                         <li><a href="/colheira/formColheita">Cadastrar</a></li>
                         <li><a href="/colheita/viewColheita">Visualizar</a></li>
+                        <li><a href="/colheita/buscaColheita">Buscar</a></li>
                     </ul>
                 </li>
                 <li>
