--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -119,7 +119,7 @@
                 <li>
                     <a href="#">Colheita</a>
                     <ul>
-                        <li><a href="/colheira/formColheita">Cadastrar</a></li>
+                        <li><a href="/colheita/formColheita">Cadastrar</a></li>
                         <li><a href="/colheita/viewColheita">Visualizar</a></li>
                         <li><a href="/colheita/buscaColheita">Buscar</a></li>
                     </ul>
@@ -129,6 +129,7 @@
                     <ul>
                         <li><a href="/irrigacao/formIrrigacao">Cadastrar</a></li>
                         <li><a href="/irrigacao/viewIrrigacao">Visualizar</a></li>
+                        <li><a href="/irrigacao/buscaIrrigacao">Buscar</a></li>
                     </ul>
                 </li>
                 <li><a href="">Buscar</a></li>
