--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -106,6 +106,7 @@
                     <ul>
                         <li><a href="/cultura/formCultura">Cadastrar</a></li>
                         <li><a href="/cultura/viewCultura">Visualizar</a></li>
+                        <li><a href="/cultura/buscaCultura">Buscar</a></li>
                     </ul>
                 </li>
                 <li>
