--- a/src/main/resources/templates/colheita/buscaColheita.html
+++ b/src/main/resources/templates/colheita/buscaColheita.html
@@ -10,7 +10,7 @@
         <div layout:fragment="conteudo">
             <h2>Busca de Colheitas</h2>
 
-            <form action="colheita/buscaColheita" method="get">
+            <form action="/colheita/colheita" method="get">
                 <label for="dataColheita">Data da Colheita:</label>
                 <input type="text" id="dataColheita" name="dataColheita" placeholder="Digite a data da Colheita">
                 <input type="submit" value="Pesquisar">
@@ -24,7 +24,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="colheita : ${lista}">
+                        <tr th:each="colheita : ${listaColheita}">
                             <td th:text="${colheita.dataColheita}"></td>
                             <td th:text="${colheita.quantidade}"></td>
                             <td th:text="${colheita.plantacao.nome}"></td>
