--- a/src/main/resources/templates/cultura/buscaCultura.html
+++ b/src/main/resources/templates/cultura/buscaCultura.html
@@ -10,7 +10,7 @@
 <div layout:fragment="conteudo">
     <h2>Busca de Culturas</h2>
 
-    <form action="cultura/buscaCultura" method="get">
+    <form action="/cultura/cultura" method="get">
         <label for="nome">Nome da Cultura:</label>
         <input type="text" id="nome" name="nome" placeholder="Digite o nome da Cultura:">
         <input type="submit" value="Pesquisar">
@@ -23,7 +23,7 @@
                 <th>Tipo da Cultura</th>
                 <th>Tipo do Solo</th>
                 <th>Estação</th>
-                <th>Comandos</th>
+
 
             </tr>
             </thead>
