--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -11,7 +11,6 @@
            --color-green-200: #a2d49e;
            --color-gradient: linear-gradient(90deg, var(--color-green-50), var(--color-green-100), var(--color-green-200));
        }
-
        html, body {
            width: 100%;
            height: 100vh;
@@ -24,7 +23,7 @@
        }
 
        #content-container {
-           display: flex;
+           display: flex
        }
 
       #form-container {
@@ -50,7 +49,7 @@
 
        aside {
            width: 200px;
-           background: var(--color-green-50);
+          background: var(--color-green-50);
            color: white;
            box-sizing: border-box;
            padding-top: 20px;
@@ -80,18 +79,59 @@
        }
 
        nav ul li:hover > ul {
-           display: block;
+           display: inline-block;
        }
+
+        body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.botao-container ul button li{
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+
+button {
+  display: block;
+  width: 120px;
+  padding: 10px;
+  margin-bottom: 5px;
+  border: none;
+  background-color: #006400;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.5s ease;
+}
+
+button:hover {
+  background-color: #228B22;
+  cursor:grab;
+  border: 2px solid #fff;
+}
+
 
     </style>
 </head>
 <body>
 
-<div id="content-container">
+
+<div class="botao-container">
+    <button>Home</button>
+    <button>Propriedade</button>
+    <button>Cultura</button>
+    <button>Platação</button>
+    <button>Colheita</button>
+    <button>Irrigação</button>
+    <button>Buscar</button>
+</div>
+<!--<div id="content-container">
     <aside>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+               <li><a href="#">Home</a></li>
                 <li>
                     <a href="#">Propriedade</a>
                     <ul>
@@ -137,7 +177,7 @@
             </ul>
         </nav>
     </aside>
-</div>
+</div> -->
 
 <div id="form-container">
     <img src="/img/LOGO.png" alt="logo" id="logo_login">
